add bug screenshots

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>MyClock</title>
-    <metta charset="utf-8" />
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="index.css"></link>
 </head>
 
@@ -14,6 +14,8 @@
     <form class="js-form form">
         <input class="inputNameText" type="text" placeholder="What is your name?"></input> <!--처음 방문한 사용자이름을 받을곳-->
     </form>
+    <p></p>
+    <p></p>
     <h4 class="js-greetings greetings"></h4>    <!--greeting 메세지를 보여줄곳-->
 
     <form class="js-toDoForm">
